--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
+body {
+    background-image: url('BLUE.jpeg'); background-repeat: repeat;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+table {
+  border: 2px solid black;
+}
+
+
 
