--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 body {
     background-image: url('BLUE.jpeg'); background-repeat: repeat;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.3em;
 }
 
 table {
   border: 2px solid black;
+}
+
+.middle {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
 }
 
 
